--- a/css/index.css
+++ b/css/index.css
@@ -129,7 +129,7 @@ footer{
             flex-direction: column;
             align-items: center;
         }
-        nav{
+        header nav{
             width:100%;
             order:2;
             display:flex;
@@ -153,19 +153,10 @@ footer{
         .cta{
             padding: 34px 0 74px 0;
             display: flex;
-            /* align-items: center; */
             flex-direction: column;
             border-bottom:2px black solid;
         }
-        .cta-text{
-            /* display:flex;
-            flex-direction: column;
-            align-items: center;
-            line-height: 73px; */
-        }
         h1{
-            /* font-size: 72px;
-            text-align:center; */
             padding: 0 0 10px 0;
         }
         .cta button{
@@ -210,9 +201,6 @@ footer{
     max-width: 899px;
     padding:0 21px;
     }
-    .cta img{
-        /* display:none; */
-    }
     .logo{
         order: -1;
     }
@@ -220,10 +208,8 @@ footer{
         flex-direction: column;
         align-items:center;
     }
-    header a{
-        padding:0 36px;
-    }
-    nav{
+    header nav{
+        display:flex;
         padding: 38px 0 0 0;
         justify-content: space-evenly;
         width:100%;
@@ -231,9 +217,6 @@ footer{
     .cta{
         padding: 58px 0 75px 0;
         border-bottom: 1px solid black;
-    }
-    header a{
-
     }
 
     .top-content{
@@ -271,7 +254,7 @@ footer{
     .container{
         max-width: 876px;
         margin:auto;
-        border: 1px solid black;
+        padding:0;
     }
     header{
         display:flex;
@@ -280,7 +263,7 @@ footer{
         width:100%;
         padding: 0 0 19px 0;
     }   
-    nav{
+    header nav{
         display:flex;
         justify-content: space-between;
         align-items: center;
@@ -313,6 +296,9 @@ footer{
     }
     .cta img{
         display:flex;
+    }
+    .middle-img{
+        width:100%;
     }
 
     }   /*--@media 900+ --*/
